--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,5 @@
 # This .gitignore file was automatically created by Microsoft(R) Visual Studio.
 ################################################################################
 
-/dist/
-*.log
-node_modules
+FrontEnd/node_modules/
+FrontEnd/dist/
